# armortools

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  Makefile  README.md  _build_kha.bat  armorpaint.bat  armorpaint.blend  azure-pipelines.yml  checkstyle.json  extract_locales.py  grid.blend  khafile.js  kincflags.js  readme.md  tsconfig.json  vscode.hxml
.github/: FUNDING.yml
Assets/: license_cay.md
Bundled/: Scene.arm  authors.md  bomberman_cc0.txt  config.arm  default_brush.json  default_logic.json  default_material.json  license_sample_cc0.txt  my_plugin.js  plugin_presentation.js  plugin_presentation_mode.js  plugin_rotate.js  readme.txt  shader_datas.arm  theme.arm  theme_light.arm
Env/: license.md
Shaders/: Gizmo_overlay.frag.glsl  Material2_mesh.frag.glsl  Material_mesh.frag.glsl  Material_mesh.vert.glsl  armdefault_mesh.frag.glsl  armdefault_mesh.vert.glsl  blur_adaptive_pass.frag.glsl  blur_edge_pass.frag.glsl  blur_gaus_pass.frag.glsl  compositor_pass.frag.glsl  compositor_pass.vert.glsl  deferred_light.frag.glsl  deferred_light_VoxelAOvar.frag.glsl  deferred_light_VoxelAOvar.vert.glsl  dilate_map.vert.glsl  layer_merge.frag.glsl  layer_view.frag.glsl  mask_apply.frag.glsl  mask_colorid.frag.glsl  pass.vert.glsl  pass_viewray.vert.glsl  pass_viewray2.vert.glsl  smaa_blend_weight.vert.glsl  smaa_edge_detect.frag.glsl  smaa_edge_detect.vert.glsl  smaa_neighborhood_blend.frag.glsl  smaa_neighborhood_blend.vert.glsl  ssgi_pass.frag.glsl  (+7 more)
base/sources/backends/data/android/app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
(+4219 files in other folders)
